added event listeners on slider

--- a/index-START.html
+++ b/index-START.html
@@ -41,6 +41,21 @@
   let startX;
   let scrollLeft;
 
+  slider.addEventListener('mousedown', () => {
+    isDown = true;
+  });
+
+  slider.addEventListener('mouseleave', () => {
+
+  });
+
+  slider.addEventListener('mouseup', () => {
+
+  });
+
+  slider.addEventListener('mousemove', () => {
+
+  });
 
 
 </script>
