handle isDown in mousedown, mouseleave, and mouseup listeners

--- a/index-START.html
+++ b/index-START.html
@@ -46,11 +46,11 @@
   });
 
   slider.addEventListener('mouseleave', () => {
-
+    isDown = false;
   });
 
   slider.addEventListener('mouseup', () => {
-
+    isDown = false;
   });
 
   slider.addEventListener('mousemove', () => {
